--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link rel="stylesheet" type="text/css" href="https://pattern-library.portal.otto.market/versions/stable/obc-components.css" />
         <title>Otto FLOW</title>
     </head>
 
