remove FLOW branding

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="stylesheet" type="text/css" href="https://pattern-library.portal.otto.market/versions/stable/obc-components.css" />
-        <title>Otto FLOW</title>
-    </head>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://pattern-library.portal.otto.market/versions/stable/obc-components.css"/>
+    <!-- TODO remove pattern library -->
+    <title>Magic Bot Importers</title>
+</head>
 
-    <body>
-        <div id="root"></div>
-    </body>
+<body>
+<div id="root"></div>
+</body>
 </html>
